# Import-Project

./: .env.example  .replit  CHAT_LOG.md  DEPLOY_CLOUD_RU.md  Dockerfile.api  Dockerfile.scanner  SYSTEM_DESCRIPTION.md  docker-compose.yml  elliott_backtest.py  elliott_backtest_1d.py  force_scan.py  live_trading.backup.json  live_trading.json  pnpm-lock.yaml  pyproject.toml  replit.md  retroactive_followup.py  scanner.py  scanner_elliott.py  start-production.sh  tg_message_ids.json
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/routes/: backtest.ts  bingx-balance.ts  index.ts  scanner.ts  signals.ts  telegram.ts  trading.ts
artifacts/dashboard/: index.html
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
artifacts/dashboard/src/components/: BotPanel.tsx  MarketsPanel.tsx  ScannerStatus.tsx  SignalsTable.tsx  StatisticsPanel.tsx
artifacts/dashboard/src/hooks/: use-kokojambo.ts
artifacts/dashboard/src/lib/: utils.ts
artifacts/dashboard/src/pages/: Backtest.tsx  Dashboard.tsx
artifacts/kokojambo-presentation/: index.html  package.json
artifacts/kokojambo-presentation/.replit-artifact/: artifact.toml
artifacts/kokojambo-presentation/src/: index.css
artifacts/kokojambo-presentation/src/data/: slides-manifest.json
attached_assets/: Pasted---1774323435778_1774323435780.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts
scripts/: build-production.sh
(+14 files in other folders)
